# synapsenet

./: .gitignore  CURRENT_STATUS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  FINAL_DEPLOYMENT_STATUS.txt  FUNCTIONALITY_TEST_REPORT.md  LINERA_INSTALLATION_STATUS.md  README.md  SYNAPSENET_COMPLETE_OVERVIEW.md  SYNAPSE_NET_REAL_DATA_COMPLETE.md  check_linera_install.ps1  deploy_with_docker.ps1  fix_latency.ps1  fix_latency_simple.ps1  install_linera.ps1  optimize_latency.md  start_synapsenet.ps1  start_synapsenet.sh  test_connection.ps1  test_synapsenet.ps1  verify_blockchain_data.md  verify_data.js  verify_webapp.html
synapsenet-backend/: PROJECT_STRUCTURE.md  README.md  REAL_DATA_SETUP.md  start_real_data.ps1  start_real_data.sh
synapsenet-backend/chains/dashboard/dashboard/: Cargo.toml
synapsenet-backend/chains/dashboard/dashboard/src/: contract.rs  lib.rs  service.rs  state.rs
synapsenet-backend/chains/identity-score/identity-score/: Cargo.toml
synapsenet-backend/chains/identity-score/identity-score/src/: contract.rs  lib.rs  service.rs  state.rs
synapsenet-backend/chains/price-feed/price-feed/: Cargo.toml
synapsenet-backend/chains/price-feed/price-feed/src/: contract.rs  lib.rs  service.rs  state.rs
synapsenet-backend/scripts/: deploy.sh  run-demo.sh  start-network.sh
synapsenet-backend/sdk/: Cargo.toml
synapsenet-backend/sdk/src/: client.rs  error.rs  events.rs  lib.rs  main.rs  types.rs
synapsenet-backend/services/: chainlink_listener.js  chainlink_listener_backup.js  package-lock.json  package.json
synapsenet-frontend/: FRONTEND_DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vitest.config.ts
synapsenet-frontend/src/: App.tsx  types.ts
synapsenet-frontend/src/components/: ChainNetwork.tsx  Dashboard.tsx  EventFeed.tsx  EventStream.tsx  LiveChart.tsx  PriceChart.tsx  ScoresChart.tsx  StatsCard.tsx  StatsGrid.tsx  StatusBar.tsx
synapsenet-frontend/src/styles/: global.css
synapsenet-frontend/src/types/: index.ts
