[package]
name = "synapsenet-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"

[lib]
name = "synapsenet_sdk"
path = "src/lib.rs"

[[bin]]
name = "synapsenet-demo"
path = "src/main.rs"
