[package]
name = "identity-score"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.4"
linera-views = "0.15.4"
linera-base = "0.15.4"
async-graphql = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = []
service = ["tokio", "serde_json"]

[lib]
name = "identity_score"
path = "src/lib.rs"

[[bin]]
name = "identity_score_contract"
path = "src/contract.rs"

[[bin]]
name = "identity_score_service"
path = "src/service.rs"
